# fastgo

./: Cargo.toml  LICENSE  README.md
sgf/: test.sgf
src/: config.rs  game_tree.rs  go_band.rs  go_move.rs  main.rs
