[package]
name = "fastgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datetime = "0.5.2"
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["canvas", "tokio", "debug"] }
json = "0.12.4"
